# core-XToolbox

./: README.md  Version.txt  XToolbox.h  XToolbox_Win32_Beta.props  XToolbox_Win32_Beta.vsprops  XToolbox_Win32_Debug.props  XToolbox_Win32_Debug.vsprops  XToolbox_Win32_Release.props  XToolbox_Win32_Release.vsprops  XToolbox_Win64_Beta.props  XToolbox_Win64_Beta.vsprops  XToolbox_Win64_Debug.props  XToolbox_Win64_Debug.vsprops  XToolbox_Win64_Release.props  XToolbox_Win64_Release.vsprops  weak_icu_beta.xcconfig  weak_icu_coverage.xcconfig  weak_icu_debug.xcconfig  weak_icu_performance.xcconfig  weak_icu_release.xcconfig  xtoolbox.xcconfig  xtoolbox_BSD.xcconfig  xtoolbox_base.xcconfig  xtoolbox_beta.xcconfig  xtoolbox_coverage.xcconfig  xtoolbox_debug.xcconfig  xtoolbox_performance.xcconfig  xtoolbox_release.xcconfig  xtoolbox_x64.xcconfig
Graphics/: VGraphics.h
Graphics/Projects/CMake/: CMakeLists.txt
Graphics/Sources/: IBoundedShape.cpp  IBoundedShape.h  ImageMeta.cpp  ImageMeta.h  V4DPicture.cpp  V4DPicture.h  V4DPictureData.cpp  V4DPictureData.h  V4DPictureDataSource.cpp  V4DPictureDataSource.h  V4DPictureDecoder.cpp  V4DPictureDecoder.h  V4DPictureIncludeBase.h  V4DPictureProxyCache.cpp  V4DPictureProxyCache.h  V4DPictureTools.cpp  V4DPictureTools.h  VAffineTransform.cpp  VAffineTransform.h  VBezier.h  VColor.cpp  VColor.h  VDocBaseLayout.cpp  VDocBaseLayout.h  VDocBorderLayout.cpp  VDocBorderLayout.h  VDocImageLayout.cpp  VDocImageLayout.h  VDocParagraphLayout.cpp  VDocParagraphLayout.h  VDocTableLayout.cpp  VDocTableLayout.h  VDocTextLayout.cpp  VDocTextLayout.h  VFont.cpp  VFont.h  VFontMgr.cpp  VFontMgr.h  VGifEncoder.cpp  VGifEncoder.h  (+81 more)
JSDebugger/Headers/: JSWDebugger.h  JSWServer.h  VChrmDebugHandler.h  VChrmDebugHandlerPrv.h  VChromeDbgHdlPage.h  VChromeDebugHandler.h  VChromeDebugHandlerPrv.h  VLogHandler.h  VNoRemoteDebugger.h  VRemoteDebugPilot.h  WebInspDebugContext.h
JSDebugger/Interfaces/: CJSWDebuggerFactory.h  JSWDebuggerClient.h  JSWDebuggerErrors.h
JSDebugger/Projects/CMake/: CMakeLists.txt
JSDebugger/Sources/: JSWDebugger.cpp  JSWDebuggerClient.cpp  JSWServer.cpp  VChrmDebugHandler.cpp  VChromeDbgHdlPage.cpp  VChromeDebugHandler.cpp  VLogHandler.cpp  VNoRemoteDebugger.cpp  VRemoteDebugPilot.cpp
JavaScript/: VJavaScript.h
JavaScript/Projects/CMake/: CMakeLists.txt
JavaScript/Sources/: CurlWrapper.cpp  CurlWrapper.h  JS4D.cpp  JS4D.h  V4DContext.cpp  V4DContext.h  VJSBuffer.cpp  VJSBuffer.h  VJSClass.cpp  VJSClass.h  VJSConstructor.cpp  VJSConstructor.h  VJSContext.cpp  VJSContext.h  VJSCrypto.cpp  VJSCrypto.h  VJSDOMEvent.cpp  VJSDOMEvent.h  VJSEndPoint.cpp  VJSEndPoint.h  VJSErrors.h  VJSEvent.cpp  VJSEvent.h  VJSEventEmitter.cpp  VJSEventEmitter.h  VJSGlobalClass.cpp  VJSGlobalClass.h  VJSJSON.cpp  VJSJSON.h  VJSMIME.cpp  VJSMIME.h  VJSMessagePort.cpp  VJSMessagePort.h  VJSModule.cpp  VJSModule.h  VJSMysqlBuffer.cpp  VJSMysqlBuffer.h  VJSNet.cpp  VJSNet.h  VJSNetServer.cpp  (+51 more)
Kernel/: VKernel.h
Kernel/Projects/CMake/: CMakeLists.txt
Kernel/Resources/: BasicUTIs.WIN.plist
Kernel/Sources/: Base64Coder.cpp  Base64Coder.h  CComponent.h  IIdleable.cpp  IIdleable.h  ILexer.cpp  ILexer.h  ILexerInput.cpp  ILexerInput.h  ILocalizer.cpp  ILocalizer.h  ILogger.cpp  ILogger.h  IPropertyCollector.cpp  IPropertyCollector.h  IRefCountable.cpp  IRefCountable.h  ISortable.cpp  ISortable.h  IStreamable.cpp  IStreamable.h  ITreeable.h  IWatchable.cpp  IWatchable.h  MainEntryPoint.h  MurmurHash.cpp  MurmurHash.h  STL_private_extensions.h  VArchiveStream.cpp  VArchiveStream.h  VArray.h  VArrayValue.cpp  VArrayValue.h  VAssert.cpp  VAssert.h  VBitField.h  VBlob.cpp  VBlob.h  VByteSwap.cpp  VByteSwap.h  (+237 more)
KernelIPC/: VKernelIPC.h
KernelIPC/Projects/CMake/: CMakeLists.txt
KernelIPC/Sources/: CComponent.h  CPlugin.h  ICommandControler.cpp  ICommandControler.h  IStreamRequest.h  VAttachment.cpp  VAttachment.h  VCommand.cpp  VCommand.h  VCommandLineParser.cpp  VCommandLineParser.h  VCommandLineParserExtension.cpp  VCommandLineParserExtension.h  VCommandLineParserHelp.cpp  VCommandLineParserOption.cpp  VCommandLineParserOption.h  VComponentImp.h  VComponentLibrary.cpp  VComponentLibrary.h  VComponentManager.cpp  VComponentManager.h  VDaemon.cpp  VDaemon.h  VDebugAttachments.cpp  VDebugAttachments.h  VEndPoint.h  VEnvironmentVariables.cpp  VEnvironmentVariables.h  VFileSystemNotification.cpp  VFileSystemNotification.h  VKernelIPCErrors.h  VKernelIPCFlags.h  VKernelIPCPrecompiled.h  VKernelIPCTypes.h  VLibrary.cpp  VLibrary.h  VPluginImp.h  VProcessIPC.cpp  VProcessIPC.h  VProcessLauncher.cpp  (+44 more)
ServerNet/: VServerNet.h
ServerNet/Examples/: VEcho.cpp  VEcho.h
ServerNet/Projects/CMake/: CMakeLists.txt
ServerNet/SharedWorkers/: VSharedWorkers.cpp  VSharedWorkers.h
ServerNet/Sources/: CryptoTools.cpp  CryptoTools.h  DTraceProbes.d  DTraceProbes.h  HTTPTools.cpp  HTTPTools.h  IConnectionListener.h  ICriticalError.h  IOpenSslLocker.h  IRequestLogger.cpp  IRequestLogger.h  NetProbes.h  SelectIO.cpp  SelectIO.h  ServerNetArchTypes.h  ServerNetSystemTypes.h  ServerNetTypes.h  ServiceDiscovery.cpp  ServiceDiscovery.h  Session.cpp  Session.h  SslStub.cpp  SslStub.h  Tools.cpp  Tools.h  VConnectionHandlerFactory.cpp  VConnectionHandlerFactory.h  VEndPoint.h  VEndPointStream.cpp  VEndPointStream.h  VHTTPClient.cpp  VHTTPClient.h  VHTTPCookie.cpp  VHTTPCookie.h  VHTTPHeader.cpp  VHTTPHeader.h  VHTTPMessage.cpp  VHTTPMessage.h  VMIMEMessage.cpp  VMIMEMessage.h  (+39 more)
XML/: VXML.h
XML/Projects/CMake/: CMakeLists.txt
XML/Sources/: 4DUTType.h  IXMLDomWrapper.cpp  IXMLDomWrapper.h  IXMLHandler.cpp  IXMLHandler.h  VCSSParser.cpp  VCSSParser.h  VInfoPlistTools.cpp  VInfoPlistTools.h  VLocalizationManager.cpp  VLocalizationManager.h  VLocalizationXMLHandler.cpp  VLocalizationXMLHandler.h  VPreferences.cpp  VPreferences.h  VSpanText.cpp  VSpanText.h  VUTI.cpp  VUTI.h  VUTIManager.cpp  VUTIManager.h  VUTIManagerXMLHandler.cpp  VUTIManagerXMLHandler.h  VXMLErrors.h  VXMLPrecompiled.h  XMLForBag.cpp  XMLForBag.h  XMLGenerator.cpp  XMLGenerator.h  XMLJsonUtility.cpp  XMLSaxHandler.h  (+6 more)
(+124 files in other folders)
